--- a/notebook/3_1_CNN_Tutorial_CIFAR10 (solution).ipynb
+++ b/notebook/3_1_CNN_Tutorial_CIFAR10 (solution).ipynb
@@ -204,23 +204,20 @@
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
-    "        \n",
-    "        ### TO DO START ###\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        ### TO DO END ###\n",
+    "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+    "        self.fc1 = nn.Linear(16 * 5 * 5, 120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, 10)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        \n",
-    "        ### TO DO START ###\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        ### TO DO END ###\n",
-    "        \n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = x.view(-1, 16 * 5 * 5)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
     "        return x\n",
     "\n",
     "\n",
@@ -245,10 +242,8 @@
    "source": [
     "import torch.optim as optim\n",
     "\n",
-    "### TO DO START ###\n",
-    "criterion = \n",
-    "optimizer = \n",
-    "### TO DO END ###"
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
    ]
   },
   {
@@ -608,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
